# MonjuDetectHM

./: .gitignore  LICENSE  README.md  SETTINGS.json  copick_config.json  create_df.py  download_external.py  example_ensemble_model.py  example_single_model.py  gt_predictions.csv  predictions.csv  pyproject.toml  run_inference.py  train.py  traq  validate.py  visualization.py
configs/: config_209.yml  config_249.yml  config_265.yml  infer_config.yml
monjudetecthm/: evaluation.py  logger.py  losses.py
monjudetecthm/data_processing/: __init__.py  dataset.py  target_generator.py
monjudetecthm/models/: __init__.py  decoder_deeplab.py  decoder_unet.py  models.py  postprocessing.py  prepare_3d_model.py
monjudetecthm/models/mlflow_integration/: __init__.py  mlflow_model.py  packager.py  utils.py
monjudetecthm/utils/: loop.py  mpl_ssh.py  utils.py
src/: component_factory.py  constants.py  evaluation.py  logger.py  losses.py
src/data_processing/: __init__.py  augmentations.py  dataset.py  input_preprocessor.py  target_generator.py
src/models/: models.py  postprocessing.py  prepare_3d_model.py
